# uriel03-hjudge

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  heroku.yml  ngrok.yml  pyproject.toml
.creds/: .env  example_postgres.env
.github/workflows/: python-package.yml
docker/: Dockerfile  Dockerfile.flaresolverr  docker-compose.yml  start.sh
docs/: usecase.md
docs/architecture/: config.typ  p1.typ  p2.typ  p3.typ  p4.typ  p5.typ  slide.typ
migrations/: env.py  new-version.py
migrations/versions/: 0001_init_and_create_user_table.py  0002_create_usersession_table.py  0003_create_exercise_and_submission_tables.py  0003_create_exercise_table.py  0004_add_course_lesson_and_course_admin_.py  0005_add_user_judge_and_extend_submission.py  0006_add_points_to_submission.py  0007_add_verdict_and_judge_enum_values.py  0008_add_lqdoj_judge_enum.py
src/hjudge/: __init__.py  app.py
src/hjudge/commons/: errors.py  models.py
src/hjudge/lms/: errors.py
src/hjudge/oj/: errors.py
src/hjudge/templates/: base.html  base.jinja
tests/: __init__.py  conftest.py
tests/commons/: test_models.py  test_uow.py
tests/lms/db/: test_course_repository.py  test_uow.py  test_user_repository.py
tests/lms/endpoints/: test_course_endpoints.py  test_dashboard.py  test_user.py  test_user_endpoints.py
tests/lms/services/: test_course_service.py  test_dashboard_service.py  test_user_service.py
tests/oj/db/: test_exercise_repository.py  test_repositories.py  test_submission_repository_batch.py  test_user_judge_repository.py
tests/oj/endpoints/: test_exercise_endpoints.py  test_submission_endpoints.py
tests/oj/services/: test_crawler_service.py  test_exercise_services.py  test_judge.py  test_user_judge_service.py
(+93 files in other folders)
